# logging-server

./: .gitignore  README.md  logging-server.cabal  stack.yaml
lib/Data/: logInfo.hs
lib/Format/: pretty.hs
lib/Utils/: text.hs
src/: Main.hs
