name:                logging-server
version:             0.1.2.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/logging-server#readme
license:             BSD3
license-file:        LICENSE
author:              frublox
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  exposed-modules:     Data.LogInfo
                     , Format.Pretty
                     , Utils.Text
  build-depends:       base >= 4.7 && < 5
                     , servant-server >= 0.4.4.4
                     , text
                     , spoon
                     , aeson


executable logging-server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , logging-server
                     , servant-server >= 0.4.4.4
                     , text
                     , spoon
                     , aeson
                     , warp
                     , warp-tls
                     , wai
                     , wai-cors
                     , time
                     , either
                     , transformers
                     
